--- a/MiRadio-Startup/Views/Musicas/Edit.cshtml
+++ b/MiRadio-Startup/Views/Musicas/Edit.cshtml
@@ -39,9 +39,9 @@
                 <span asp-validation-for="Descripcion" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TamañoMB" class="control-label"></label>
-                <input asp-for="TamañoMB" class="form-control" />
-                <span asp-validation-for="TamañoMB" class="text-danger"></span>
+                <label asp-for="TamanoKB" class="control-label"></label>
+                <input asp-for="TamanoKB" class="form-control" />
+                <span asp-validation-for="TamanoKB" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="MusicaFile" class="control-label"></label>
