--- a/MiRadio-Startup/Views/Musicas/Create.cshtml
+++ b/MiRadio-Startup/Views/Musicas/Create.cshtml
@@ -4,13 +4,13 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Crear</h1>
 
 <h4>Musica</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="FechaPublicacion" class="control-label"></label>
@@ -38,19 +38,30 @@
                 <span asp-validation-for="Descripcion" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TamañoMB" class="control-label"></label>
-                <input asp-for="TamañoMB" class="form-control" />
-                <span asp-validation-for="TamañoMB" class="text-danger"></span>
+                <label asp-for="UrlMusica" class="control-label"></label>
+                <input asp-for="UrlMusica" class="form-control" />
+                <span asp-validation-for="UrlMusica" class="text-danger"></span>
             </div>
-            
+            <div class="form-group">
+                <label asp-for="MusicaFile" class="control-label"></label>
+                <input asp-for="MusicaFile" type="file" class="form-control" />
+                <span asp-validation-for="MusicaFile" class="text-danger"></span>
+            </div>
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
+                <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+                <button type="button" class="btn btn-success">Custom Button</button>
             </div>
         </form>
+
     </div>
+
+
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
