probelmas en crear comnetarios y videos

--- a/MiRadio-Startup/Views/Shared/_Layout.cshtml
+++ b/MiRadio-Startup/Views/Shared/_Layout.cshtml
@@ -28,9 +28,14 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Index">Usuarios</a>
                         </li>
-                     
+
                         <a class="nav-link text-dark" asp-area="" asp-controller="Musicas" asp-action="Index">Musicas</a>
                         </li>
+                        </li>
+
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Comentarios" asp-action="Index">Comentarios</a>
+                        </li>
+
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Logout">Cerrar Sesion</a>
                         </li>
