--- a/MiRadio-Startup/Views/Musicas/Edit.cshtml
+++ b/MiRadio-Startup/Views/Musicas/Edit.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-controller="Musicas" asp-action="Edit" method="post" enctype="multipart/form-data">
+        <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="IdMusica" />
             <div class="form-group">
@@ -35,17 +35,14 @@
             </div>
             <div class="form-group">
                 <label asp-for="Descripcion" class="control-label"></label>
-                <input asp-for="Descripcion" class="form-control" />
+                <textarea asp-for="Descripcion" class="form-control"></textarea>
                 <span asp-validation-for="Descripcion" class="text-danger"></span>
             </div>
+
             <div class="form-group">
-                <label asp-for="TamanoKB" class="control-label"></label>
-                <input asp-for="TamanoKB" class="form-control" />
-                <span asp-validation-for="TamanoKB" class="text-danger"></span>
-            </div>
-            <div class="form-group">
+
                 <label asp-for="MusicaFile" class="control-label"></label>
-                <input asp-for="MusicaFile" class="form-control" accept="video/*" />
+                <input asp-for="MusicaFile" type="file" class="form-control" />
                 <span asp-validation-for="MusicaFile" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -59,3 +56,8 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
