--- a/MiRadio-Startup/Views/Musicas/Index.cshtml
+++ b/MiRadio-Startup/Views/Musicas/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Musica</h1>
 
 <p>
-    <a asp-action="Create" class="btn btn-primary">Create New</a>
+    <a asp-action="Create" class="btn btn-primary">Crear nuevo</a>
 </p>
 <table class="table">
     <thead>
