errores ya corregidos

--- a/MiRadio-Startup/Views/Musicas/Create.cshtml
+++ b/MiRadio-Startup/Views/Musicas/Create.cshtml
@@ -38,9 +38,9 @@
                 <span asp-validation-for="Descripcion" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="UrlMusica" class="control-label"></label>
-                <input asp-for="UrlMusica" class="form-control" />
-                <span asp-validation-for="UrlMusica" class="text-danger"></span>
+                <label asp-for="TamanoKB" class="control-label"></label>
+                <input asp-for="TamanoKB" class="form-control" />
+                <span asp-validation-for="TamanoKB" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="MusicaFile" class="control-label"></label>
