--- a/MiRadio-Startup/Views/Musicas/Edit.cshtml
+++ b/MiRadio-Startup/Views/Musicas/Edit.cshtml
@@ -40,6 +40,12 @@
             </div>
 
             <div class="form-group">
+                <label asp-for="TamanoKB" class="control-label"></label>
+                <input asp-for="TamanoKB" class="form-control" />
+                <span asp-validation-for="TamanoKB" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
 
                 <label asp-for="MusicaFile" class="control-label"></label>
                 <input asp-for="MusicaFile" type="file" class="form-control" />
